tests/sources/invalid/generics/generic_class_unclosed_type_args.fire
// Missing closing '>' for a generic class instantiation's type-argument
// list (top-level and nested).
class Pair<T, U> {
    T a;
    U b;

    Pair(T a, U b) {
        this.a = a;
        this.b = b;
    }
}

int32 main() {
    Pair<int32 int32> p = Pair(1, 2);  //~ ERROR FS-PARSE-0010 @16
//~^ ERROR FS-PARSE-0010 @21
//~^^ ERROR FS-PARSE-0003 @23
    return 0;
}
